<resources>
    <string name="app_name">Green Flag</string>
    <string name="intro_text_description">GreenFlag Customers can </string>
    <string name="create_account">create an account to access</string>
    <string name="health">Car health updates</string>
    <string name="request">Request a rescue online</string>
    <string name="policy">Police information</string>
    <string name="create">Create an account </string>
    <string name="todo">TODO</string>
    <string name="todo_fix">TODO</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_an_account_ac">Create an account</string>
    <string name="loge_in">Login green</string>
    <string name="next">Next</string>
    <string name="repeat_password">Enter your password</string>
    <string name="R_password">Repeat password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="create_password">Create password</string>
    <string name="email_address">Email address</string>
    <string name="create_an_account_c">Create an account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="create_an_account_rl">Create an account</string>
    <string name="todo_td">TODO</string>
    <string name="todo_todo">TODO</string>
    <string name="your_password_should_have_a_minimum_of_8_characters_and_contain_at_least_one_number_one_uppercase_and_one_lower_case_letter_you_can_use_special_characters">Your password should have a minimum of 8 characters and contain at least one number one uppercase and one lower case letter.You can use special characters</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>

</resources>