<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAcountActivity"
    android:background="@color/black">
    <include
        android:id="@+id/layout"
        layout="@layout/toolbar"/>

    <View
        android:id="@+id/divder"
        style="@style/Divider"
        app:layout_constraintTop_toBottomOf="@id/layout"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/email_address"
        android:gravity="center"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:fontFamily="@font/museosanslarge"
        app:layout_constraintTop_toBottomOf="@id/divder"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="@string/enter_your_email"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/tv_create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_password"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:fontFamily="@font/museosanslarge"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="@string/enter_your_password"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/tv_create_password"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/tv_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/R_password"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:fontFamily="@font/museosanslarge"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input__repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="@string/repeat_password"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/tv_repeat_password"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="553dp"
        android:layout_height="128dp"
        android:layout_margin="30dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/museosanssmall"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="22sp"

        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input__repeat_password"
        tools:text="Your password should have a minimum of 8
        characters and contain at least one number one uppercase and one lower
        case letter.You can use special characters" />

    <TextView
        android:id="@+id/tv_create_login"
        android:layout_width="352dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museosanslarge"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_info"
        app:layout_constraintVertical_bias="0.342"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>