<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".introActivity">

    <ImageView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/todo_fix"
        android:padding="3sp"
        android:src="@drawable/logo_green_flag"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="846dp"
        android:layout_height="52dp"
        android:fontFamily="@font/museosanslarge"
        android:gravity="center"
        android:text="@string/intro_text_description"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/access"
        android:layout_width="846dp"
        android:layout_height="52dp"
        android:fontFamily="@font/museosanslarge"
        android:gravity="center"
        android:text="@string/intro_text_description"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.063" />


    <ImageView
        android:id="@+id/tick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/tick"
        app:layout_constraintBottom_toBottomOf="@id/request"
        app:layout_constraintEnd_toStartOf="@+id/health"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/access"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/museosanslarge"
        android:gravity="center"
        android:text="@string/health"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tick"
        app:layout_constraintTop_toBottomOf="@+id/access"
        app:layout_constraintVertical_bias="0.629" />

    <ImageView
        android:id="@+id/tickRescue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/todo"
        android:rotationX="-4"
        android:src="@drawable/tick"
        app:layout_constraintBottom_toBottomOf="@id/police"
        app:layout_constraintEnd_toStartOf="@+id/request"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/request"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/museosanslarge"
        android:rotationX="-4"
        android:text="@string/request"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tickPolicy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toEndOf="@id/tickRescue"
        app:layout_constraintTop_toBottomOf="@+id/tick"
        app:layout_constraintVertical_bias="0.072" />

    <ImageView
        android:id="@+id/tickPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/tick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/police"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/request"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/police"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museosanslarge"
        android:gravity="center"
        android:padding="20sp"
        android:text="@string/policy"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tickPolicy"
        app:layout_constraintTop_toBottomOf="@+id/request"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="763dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museosanslarge"
        android:gravity="center"
        android:text="@string/create_an_account_ac"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/police"
        app:layout_constraintVertical_bias="0.518"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_create_login"
        android:layout_width="763dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museosanslarge"
        android:gravity="center"
        android:text="@string/loge_in"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_create_account"
        app:layout_constraintVertical_bias="0.056"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>